<resources>
    <string name="app_name">WeWe</string>
    <string name="fragment_sidebar_main_favorite_title">FAVORITES</string>
    <string name="fragment_sidebar_main_channels_title">CHANNELS</string>
    <string name="fragment_sidebar_main_direct_messages_title">DIRECT MESSAGES</string>
    <string name="fragment_sidebar_main_livechat_title">LIVECHAT</string>
    <string name="user_status_online">Online</string>
    <string name="user_status_away">Away</string>
    <string name="user_status_busy">Busy</string>
    <string name="user_status_invisible">Invisible</string>
    <string name="fragment_sidebar_main_logout_title">Logout</string>
    <string name="dialog_add_channel_name">name</string>
    <string name="dialog_add_channel_private">private</string>
    <string name="dialog_add_channel_read_only">read only</string>
    <plurals name="fmt_dialog_view_latest_message_title">
        <item quantity="one">New %d message</item>
        <item quantity="other">New %d messages</item>
        <item quantity="many">New %d messages</item>
    </plurals>
    <string name="fragment_room_list_pinned_message_title">Pinned Messages (%s)</string>
    <string name="fragment_room_list_favorite_message_title">Favorite Messages (%s)</string>
    <string name="fragment_room_list_file_list_title">File list (%s)</string>
    <string name="fragment_room_list_member_list_title">Member list (%s)</string>
    <string name="fragment_room_list_could_not_load_your_request">Could not load your request.\n%s.</string>
    <string name="fragment_room_list_no_pinned_message_to_show">No pinned messages to show</string>
    <string name="fragment_room_list_no_favorite_message_to_show">No favorite messages to show</string>
    <string name="fragment_room_list_no_file_list_to_show">No file list to show</string>
    <string name="fragment_room_list_no_member_list_to_show">No member list to show</string>
    <string name="start_of_conversation">Start of conversation</string>
    <string name="sending">Sending…</string>
    <string name="not_synced">Not synced</string>
    <string name="failed_to_sync">Failed to sync</string>
    <string name="failed_to_delete">Failed to delete</string>
    <string name="failed_to_delete_message">The message could not be deleted at this time. Please try again later</string>
    <string name="resend">Resend</string>
    <string name="discard">Discard</string>
    <string name="ok">OK</string>
    <string name="dialog_view_latest_message_action">View</string>
    <string name="file_uploading_title">Uploading…</string>
    <string name="dialog_user_registration_email">Email</string>
    <string name="dialog_user_registration_username">Username</string>
    <string name="sub_username">\@%s</string>
    <string name="username">\@%s</string>
    <string name="dialog_user_registration_password">Password</string>
    <string name="fragment_home_welcome_message">Welcome to WeWe.Chat.Android\nSelect a channel from the drawer.</string>
    <string name="fragment_input_hostname_hostname">Server</string>
    <string name="fragment_input_hostname_server_hint">open.WeWe.chat</string>
    <string name="fragment_input_hostname_connect">CONNECT</string>
    <string name="fragment_login_username_or_email">Username or email</string>
    <string name="fragment_login_password">Password</string>
    <string name="fragment_login_sign_up">SIGN UP</string>
    <string name="fragment_login_sign_in">SIGN IN</string>
    <string name="fragment_retry_login_retry_title">RETRY</string>
    <string name="fragment_retry_login_error_title">Your connection seems off…</string>
    <string name="server_config_activity_authenticating">Authenticating…</string>
    <string name="home_fragment_title">WeWe.Chat - Home</string>
    <string name="fragment_sidebar_main_unread_rooms_title">UNREAD ROOMS</string>
    <string name="doc_upload_message_spec_title">Attach file</string>
    <string name="image_upload_message_spec_title">Attach image</string>
    <string name="audio_upload_message_spec_title">Attach audio</string>
    <string name="video_upload_message_spec_title">Attach video</string>
    <string name="input_hostname_invalid_server_message">Invalid server version</string>
    <string name="make_sure_your_server_version_is_up_to_date">Make sure your WeWe.Chat server version is up to date</string>
    <string name="connection_error_try_later">There\'s a connection error. Please try later.</string>
    <string name="version_info_text">Version: %s</string>
    <string name="two_factor_authentication_title">Two-factor authentication</string>
    <string name="open_your_authentication_app_and_enter_the_code">Open your authentication app and enter the code</string>
    <string name="two_factor_code">Two-factor code</string>
    <string name="spotlight_search">Search</string>
    <string name="spotlight_load_more_results">Load more results</string>
    <string name="edit_message">Edit message</string>
    <string name="message_options_no_message_info">Ooops. Something\'s up!</string>
    <string name="message_options_no_permissions_info">You have no permissions</string>
    <string name="menu_pinned_messages">Pinned messages</string>
    <string name="menu_favorite_messages">Favorite messages</string>
    <string name="menu_file_list">File list</string>
    <string name="menu_member_list">Member list</string>
    <string name="add_new_team">Add new Team</string>
    <string name="navigation_search_rooms">Поиск комнат</string>
    <string name="search">Поиск</string>
    <string name="forward_message">Переслать сообщение</string>
    <string name="delet_message">Удалить сообщение</string>
    <string name="copy_message">Копировать сообщение</string>
    <string name="private_title">WeWe защищает вашу
        конфиденциальность тщательнее, чем любой другой мессенджер.
    Побробнее смотрите в Политике конфиденциальности</string>
    <string name="permgrouplab_microphone">Microphone</string>
    <string name="permgroupdesc_microphone">record audio</string>
    <string name="permlab_recordAudio">record audio</string>
    <string name="permdesc_recordAudio">Allows the app to record audio with the
      microphone.  This permission allows the app to record audio at any time
without your confirmation.</string>
    <string name="permgrouplab_camera">Camera</string>
    <string name="permgroupdesc_camera">take pictures and record video</string>
    <string name="permlab_camera">take pictures and videos</string>
    <string name="permdesc_camera">Allows the app to take pictures and videos
      with the camera.  This permission allows the app to use the camera at any
      time without your confirmation.</string>
    <string name="permissions_needed">Allows the app to record audio and use the camera</string>
    <string name="str_login">Login</string>
    <string name="str_numpad">NumPad</string>
    <string name="str_video">Video</string>
    <string name="str_message">Message</string>
    <string name="str_setting">Setting</string>
    <string name="str_optional">Optional</string>
    <string name="str_username">UserName</string>
    <string name="str_displayname">DisplayName</string>
    <string name="str_authName">AuthName</string>
    <string name="str_password">Password</string>
    <string name="str_userDomain">UserDomain</string>
    <string name="str_requried">Required</string>
    <string name="str_transport">Transport</string>
    <string name="str_srtp">SRTP</string>
    <string name="str_SIPServer">SIPServer</string>
    <string name="str_SIPServerPort">SIPServerPort</string>
    <string name="str_StunServer">StunServer</string>
    <string name="str_StunServerPort">StunServerPort</string>
    <string name="str_localSIPPort">LocalSIPPort</string>
    <string name="outboundServer">outboundServer</string>
    <string name="outboundServerPort">outboundServerPort</string>
    <string name="register">Login</string>
    <string name="unregister">Logout</string>
    <string name="registed">available</string>
    <string name="not_reg">sign out</string>
    <string name="str_videocall">VideoCall</string>
    <string name="str_acceptvideo">AcceptVideo</string>
    <string name="str_conference">Conference</string>
    <string name="str_dial">Dial</string>
    <string name="str_vcall">Video Call</string>
    <string name="str_acall">Audio Call</string>
    <string name="str_del">Del</string>
    <string name="str_hold">Hold</string>
    <string name="str_unhold">UnHold</string>
    <string name="str_reject">Reject</string>
    <string name="str_att_transfer">Attend Transfer</string>
    <string name="str_transfer">Transfer</string>
    <string name="str_hangup">Hangup</string>
    <string name="str_speakon">SpeakOn</string>
    <string name="str_refer">Refer</string>
    <string name="str_mute">Mute</string>
    <string name="str_answer">Answer</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="publish">Publish</string>
    <string name="unpublish">Unpublish</string>
    <string name="str_sendmsg">Send</string>
    <string name="str_sendsdp">SendSDP</string>
    <string name="str_confrence">Conference</string>
    <string name="str_setstatus">Set</string>
    <string name="str_status">Status :</string>
    <string name="str_clear">Clear</string>
    <string name="str_update">Subscribe</string>
    <string name="str_accept">Accept</string>
    <string name="str_refuse">Refuse</string>
    <string name="str_sendto">Send to:</string>
    <string name="contact">Contact</string>
    <string name="message">Message</string>
    <string name="sipsample">SipSample</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="website">website:http://www.portsip.com</string>
    <string name="email">email:sales@portsip.com</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="str_tips">..</string>
    <string name="line">line-</string>
    <string name="MEDIA_G722">MEDIA_G722</string>
    <string name="MEDIA_G729">MEDIA_G729</string>
    <string name="MEDIA_AMR">MEDIA_AMR</string>
    <string name="MEDIA_AMRWB">MEDIA_AMRWB</string>
    <string name="MEDIA_GSM">MEDIA_GSM</string>
    <string name="MEDIA_PCMA">MEDIA_PCMA</string>
    <string name="MEDIA_PCMU">MEDIA_PCMU</string>
    <string name="MEDIA_SPEEX">MEDIA_SPEEX</string>
    <string name="MEDIA_SPEEXWB">MEDIA_SPEEXWB</string>
    <string name="MEDIA_ILBC">MEDIA_ILBC</string>
    <string name="MEDIA_ISACWB">MEDIA_ISACWB</string>
    <string name="MEDIA_ISACSWB">MEDIA_ISACSWB</string>
    <string name="MEDIA_G7221">MEDIA_G7221</string>
    <string name="MEDIA_OPUS">MEDIA_OPUS</string>
    <string name="MEDIA_DTMF">MEDIA_DTMF</string>
    <string name="string_audiofeature">Audio Feature</string>
    <string name="MEDIA_VAD">MEDIA_VAD</string>
    <string name="MEDIA_AEC">MEDIA_AEC</string>
    <string name="MEDIA_ANS">MEDIA_ANS</string>
    <string name="MEDIA_AGC">MEDIA_AGC</string>
    <string name="MEDIA_CNG">MEDIA_CNG</string>
    <string name="string_video">Video</string>
    <string name="MEDIA_H264">MEDIA_H264</string>
    <string name="MEDIA_VP8">MEDIA_VP8</string>
    <string name="MEDIA_VP9">MEDIA_VP9</string>
    <string name="str_resolution_title">Select a resolution</string>
    <string name="str_resolution">Resolution</string>
    <string name="str_resolution_default">CIF</string>
    <string name="str_bitrate">Bitrate</string>
    <string name="str_avpath">Audio and Vedio recording</string>
    <string name="str_avpathtitle">Record file directory</string>
    <string name="str_avpathkey">AVpath</string>
    <string name="str_forward">Forward</string>
    <string name="str_fwopentitle">Enable forward call</string>
    <string name="str_fwopenkey">ForwardEnable</string>
    <string name="str_fwtotitle">Forward call to:</string>
    <string name="str_fwtokey">Forwardto</string>
</resources>