<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:background="#383547"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="34dp"
        android:src="@drawable/ic_logo"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/progressBar2"

        style="?android:attr/progressBarStyle"
        android:layout_width="70dp"
        android:layout_height="100dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"

        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sipsample"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txtips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/unregister"
            android:textColor="@color/black" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomline"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <Button
                android:id="@+id/btonline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/online" />

            <Button
                android:id="@+id/btoffline"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/offline" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomline"
        android:layout_below="@id/headline"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:weightSum="4">

                <Spinner
                    android:id="@+id/spTransport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/str_transport" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_transport"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="horizontal"
                android:weightSum="4">

                <Spinner
                    android:id="@+id/spSRTP"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/str_srtp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/str_srtp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etdisplayname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_displayname"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etuserdomain"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_userDomain"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etauthName"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_authName"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etStunServer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/stunsrv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_StunServer"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/TableRow9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etStunPort"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/StunServerPort"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_StunServerPort"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/required"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etusername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true"
                        android:text="990188" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_username"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etpwd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:text="(Eg1g0%B!U" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_password"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etsipsrv"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:singleLine="true"
                        android:text="sip.weltwelle.com" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_SIPServer"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etsipport"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:ems="10"
                        android:inputType="number"
                        android:singleLine="true"
                        android:text="5061" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_SIPServerPort"
                        android:textColor="@color/black" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_requried"
                android:textColor="@color/black"
                android:textSize="@dimen/labletxsize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/str_optional"
                android:textColor="@color/black"
                android:textSize="@dimen/labletxsize" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>